# agentx

./: AGENTS.md  Cargo.toml  README.md
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: quickstart.mdx
examples/: quickstart.md  quickstart.rs
src/: agent.rs  browser.rs  cua.rs  lib.rs
